use command line to efficiently add table to database

--- a/05_duckdb.ipynb
+++ b/05_duckdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,20 +86,20 @@
        "└───────────────┴──────────────┴──────────────┴──────────────┴──────────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ride = pl.read_parquet('/Users/sra/files/projects/citibike_project/combined/group1_combined/group1_pl_ridenorm.parquet')\n",
+    "ride = pl.read_parquet('../combined/group1_combined/group1_pl_ridenorm.parquet')\n",
     "print('original shape: ', ride.shape)\n",
     "ride.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "└──────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "└────────────────────┘"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,24 +215,24 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;48 St &amp; 37 Ave&quot;</td><td>6435.02</td><td>40.751555</td><td>-73.915026</td></tr><tr><td>&quot;Cliff St &amp; Fulton St&quot;</td><td>5065.14</td><td>40.70838</td><td>-74.00495</td></tr><tr><td>&quot;Broadway &amp; W 38 St&quot;</td><td>6441.05</td><td>40.752996</td><td>-73.987216</td></tr><tr><td>&quot;Carlton Ave &amp; Park Ave&quot;</td><td>4732.04</td><td>40.695807</td><td>-73.973555</td></tr><tr><td>&quot;44 St &amp; 6 Ave&quot;</td><td>3233.06</td><td>40.647105</td><td>-74.004483</td></tr></tbody></table></div>"
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;W 56 St &amp; 6 Ave&quot;</td><td>6809.07</td><td>40.763406</td><td>-73.977225</td></tr><tr><td>&quot;E 26 St &amp; 3 Ave&quot;</td><td>6089.11</td><td>40.740693</td><td>-73.981606</td></tr><tr><td>&quot;34 St &amp; 4 Ave&quot;</td><td>3492.04</td><td>40.655278</td><td>-74.003101</td></tr><tr><td>&quot;George St &amp; Wilson Ave&quot;</td><td>4906.07</td><td>40.702997</td><td>-73.92997</td></tr><tr><td>&quot;Pacific St &amp; Thomas S. Boyland…</td><td>4023.05</td><td>40.675735</td><td>-73.913967</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 4)\n",
-       "┌────────────────────────┬──────────────────┬───────────┬────────────┐\n",
-       "│ start_station_name     ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
-       "│ ---                    ┆ ---              ┆ ---       ┆ ---        │\n",
-       "│ str                    ┆ f64              ┆ f64       ┆ f64        │\n",
-       "╞════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
-       "│ 48 St & 37 Ave         ┆ 6435.02          ┆ 40.751555 ┆ -73.915026 │\n",
-       "│ Cliff St & Fulton St   ┆ 5065.14          ┆ 40.70838  ┆ -74.00495  │\n",
-       "│ Broadway & W 38 St     ┆ 6441.05          ┆ 40.752996 ┆ -73.987216 │\n",
-       "│ Carlton Ave & Park Ave ┆ 4732.04          ┆ 40.695807 ┆ -73.973555 │\n",
-       "│ 44 St & 6 Ave          ┆ 3233.06          ┆ 40.647105 ┆ -74.004483 │\n",
-       "└────────────────────────┴──────────────────┴───────────┴────────────┘"
+       "┌─────────────────────────────────┬──────────────────┬───────────┬────────────┐\n",
+       "│ start_station_name              ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
+       "│ ---                             ┆ ---              ┆ ---       ┆ ---        │\n",
+       "│ str                             ┆ f64              ┆ f64       ┆ f64        │\n",
+       "╞═════════════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
+       "│ W 56 St & 6 Ave                 ┆ 6809.07          ┆ 40.763406 ┆ -73.977225 │\n",
+       "│ E 26 St & 3 Ave                 ┆ 6089.11          ┆ 40.740693 ┆ -73.981606 │\n",
+       "│ 34 St & 4 Ave                   ┆ 3492.04          ┆ 40.655278 ┆ -74.003101 │\n",
+       "│ George St & Wilson Ave          ┆ 4906.07          ┆ 40.702997 ┆ -73.92997  │\n",
+       "│ Pacific St & Thomas S. Boyland… ┆ 4023.05          ┆ 40.675735 ┆ -73.913967 │\n",
+       "└─────────────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,6 +249,7 @@
     "        first_rows.append(first_row.to_dicts()[0])\n",
     "\n",
     "unique_stations = pl.DataFrame(first_rows)\n",
+    "unique_stations.write_parquet('../combined/group1_combined/unique_stations.parquet')\n",
     "print(unique_stations.shape)\n",
     "unique_stations.head()"
    ]
@@ -257,12 +258,270 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have some data that is normalized with the columns 'ridertype' and 'biketype'. We will add that data to the table using DuckDB."
+    "We have some data that is normalized with the columns 'ridertype' and 'biketype'. We will add that data to a new database using DuckDB."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I will add the following tables to the database:\n",
+    "* **rider**: whether a rider is a member or a casual user of the service\n",
+    "* **bike**: what kind of bike the rider used\n",
+    "* **unique_stations**: a table showing all the stations in the dataset\n",
+    "* **ride**: a table showing every single ride event in the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stations Table (sample):\n",
+      "                  start_station_name  start_station_id  start_lat  start_lng\n",
+      "0                    W 56 St & 6 Ave           6809.07  40.763406 -73.977225\n",
+      "1                    E 26 St & 3 Ave           6089.11  40.740693 -73.981606\n",
+      "2                      34 St & 4 Ave           3492.04  40.655278 -74.003101\n",
+      "3             George St & Wilson Ave           4906.07  40.702997 -73.929970\n",
+      "4  Pacific St & Thomas S. Boyland St           4023.05  40.675735 -73.913967\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "with duckdb.connect('citibike.db') as con:\n",
+    "    # Create and populate the `rider` table\n",
+    "    con.execute(\"DROP TABLE IF EXISTS rider\")\n",
+    "    con.execute(\"\"\"\n",
+    "        CREATE TABLE rider (\n",
+    "            type VARCHAR(255),\n",
+    "            id INT\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    con.execute(\"INSERT INTO rider VALUES ('member', 0), ('casual', 1)\")\n",
+    "\n",
+    "    # Create and populate the `bike` table\n",
+    "    con.execute(\"DROP TABLE IF EXISTS bike\")\n",
+    "    con.execute(\"\"\"\n",
+    "        CREATE TABLE bike (\n",
+    "            type VARCHAR(255),\n",
+    "            id INT\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    con.execute(\"\"\"\n",
+    "        INSERT INTO bike VALUES \n",
+    "        ('classic', 0), \n",
+    "        ('electric', 1), \n",
+    "        ('unknown', 2)\n",
+    "    \"\"\")\n",
+    "\n",
+    "    # Create and populate the `stations` table\n",
+    "    con.execute(\"DROP TABLE IF EXISTS stations\")\n",
+    "    con.execute(\"\"\"\n",
+    "        CREATE TABLE stations (\n",
+    "            start_station_name VARCHAR(255),\n",
+    "            start_station_id DOUBLE,\n",
+    "            start_lat DOUBLE,\n",
+    "            start_lng DOUBLE\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    con.execute(\"INSERT INTO stations SELECT * FROM read_parquet('../combined/group1_combined/unique_stations.parquet')\")\n",
+    "\n",
+    "    # Verify `stations` table content\n",
+    "    print(\"Stations Table (sample):\")\n",
+    "    print(con.execute(\"SELECT * FROM stations LIMIT 5\").fetchdf())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now to add the rides table, which is the largest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Path to the DuckDB database and the Parquet file\n",
+    "db_path = \"citibike.db\"\n",
+    "parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
+    "\n",
+    "with duckdb.connect(db_path) as con:\n",
+    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "    con.execute(\"CREATE TABLE ride AS SELECT * FROM read_parquet($1)\", [parquet_path])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted 500000 rows so far...\n",
+      "Inserted 1000000 rows so far...\n",
+      "Inserted 1500000 rows so far...\n",
+      "Inserted 2000000 rows so far...\n",
+      "Inserted 2500000 rows so far...\n",
+      "Inserted 3000000 rows so far...\n",
+      "Inserted 3500000 rows so far...\n",
+      "Inserted 4000000 rows so far...\n",
+      "Inserted 4500000 rows so far...\n",
+      "Inserted 5000000 rows so far...\n",
+      "Inserted 5500000 rows so far...\n",
+      "Inserted 6000000 rows so far...\n",
+      "Inserted 6500000 rows so far...\n",
+      "Inserted 7000000 rows so far...\n",
+      "Inserted 7500000 rows so far...\n",
+      "Inserted 8000000 rows so far...\n",
+      "Inserted 8500000 rows so far...\n",
+      "Inserted 9000000 rows so far...\n",
+      "Inserted 9500000 rows so far...\n",
+      "Inserted 10000000 rows so far...\n",
+      "Inserted 10500000 rows so far...\n",
+      "Inserted 11000000 rows so far...\n",
+      "Inserted 11500000 rows so far...\n",
+      "Inserted 12000000 rows so far...\n",
+      "Inserted 12500000 rows so far...\n",
+      "Inserted 13000000 rows so far...\n",
+      "Inserted 13500000 rows so far...\n",
+      "Inserted 14000000 rows so far...\n",
+      "Inserted 14500000 rows so far...\n",
+      "Inserted 15000000 rows so far...\n",
+      "Inserted 15500000 rows so far...\n",
+      "Inserted 16000000 rows so far...\n",
+      "Inserted 16500000 rows so far...\n",
+      "Inserted 17000000 rows so far...\n",
+      "Inserted 17500000 rows so far...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91b9fe37d79743128faf748ad15cb438",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Path to the DuckDB database and the Parquet file\n",
+    "db_path = \"citibike.db\"\n",
+    "parquet_path = \"../combined/group1_combined/group1_pl_ridenorm.parquet\"\n",
+    "\n",
+    "# Connect to the DuckDB database\n",
+    "chunk_size = 500_000\n",
+    "\n",
+    "with duckdb.connect(db_path) as con:\n",
+    "    # Drop and create the table\n",
+    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "    con.execute(f\"CREATE TABLE ride AS SELECT * FROM '{parquet_path}' LIMIT 0\")\n",
+    "    \n",
+    "    # Process and insert chunks\n",
+    "    offset = 0\n",
+    "    while True:\n",
+    "        query = f\"\"\"\n",
+    "            INSERT INTO ride\n",
+    "            SELECT * FROM '{parquet_path}'\n",
+    "            LIMIT {chunk_size} OFFSET {offset}\n",
+    "        \"\"\"\n",
+    "        result = con.execute(query).fetchall()\n",
+    "        if not result:  # No more rows\n",
+    "            break\n",
+    "        offset += chunk_size\n",
+    "        if offset % 500000 == 0:\n",
+    "            with open(\"progress_log.txt\", \"a\") as log_file:\n",
+    "                log_file.write(f\"Inserted {offset} rows so far...\\n\")\n",
+    "\n",
+    "    # Final row count\n",
+    "    row_count = con.execute(\"SELECT COUNT(*) FROM ride\").fetchone()[0]\n",
+    "    print(f\"Total rows inserted: {row_count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Path to ride parquet file\n",
+    "ride_file = '../combined/group1_combined/group1_pl_ridenorm.parquet'\n",
+    "\n",
+    "# Read the Parquet file into a Polars DataFrame\n",
+    "ride_df = pl.read_parquet(ride_file)\n",
+    "\n",
+    "# Define chunk size\n",
+    "chunk_size = 1_000_000\n",
+    "\n",
+    "# Connect to DuckDB and insert data in chunks\n",
+    "with duckdb.connect('citibike.db') as con:\n",
+    "    # Drop and create the `ride` table\n",
+    "    con.execute(\"DROP TABLE IF EXISTS ride\")\n",
+    "    con.execute(\"\"\"\n",
+    "        CREATE TABLE ride (\n",
+    "            ride_id VARCHAR(255),\n",
+    "            started_at TIMESTAMP,\n",
+    "            ended_at TIMESTAMP,\n",
+    "            start_station_id DOUBLE,\n",
+    "            end_station_id DOUBLE,\n",
+    "            ridertype INT,\n",
+    "            biketype INT\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "\n",
+    "    # Insert data in chunks\n",
+    "    for i in range(0, len(ride_df), chunk_size):\n",
+    "        chunk = ride_df[i : i + chunk_size].to_arrow()  # Convert Polars chunk to Arrow\n",
+    "        con.execute(\"INSERT INTO ride SELECT * FROM read_arrow_table(?)\", [chunk])\n",
+    "\n",
+    "    # Verify insertion\n",
+    "    print(\"Ride Table (sample):\")\n",
+    "    print(con.execute(\"SELECT * FROM ride LIMIT 5\").fetchdf())\n",
+    "\n",
+    "# Print the `rider` and `bike` tables for validation\n",
+    "with duckdb.connect('citibike.db') as con:\n",
+    "    print(\"Rider Table:\")\n",
+    "    print(con.execute(\"SELECT * FROM rider\").fetchall())\n",
+    "    print(\"Bike Table:\")\n",
+    "    print(con.execute(\"SELECT * FROM bike\").fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -305,6 +564,13 @@
     "        ('classic', 0), \n",
     "        ('electric', 1), \n",
     "        ('unknown', 2)''')\n",
+    "    \n",
+    "with duckdb.connect('citibike.db') as con:\n",
+    "    con.execute('drop table if exists ride')\n",
+    "    con.execute('''\n",
+    "            create table ride (\n",
+    "                )\n",
+    "                ''')\n",
     "    \n",
     "with duckdb.connect('citibike.db') as con:\n",
     "    print(\"Rider Table:\")\n",
@@ -442,15 +708,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌─────────┐\n",
+       "│  name   │\n",
+       "│ varchar │\n",
+       "├─────────┤\n",
+       "│ bike    │\n",
+       "│ rider   │\n",
+       "└─────────┘"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# create tables\n",
-    "with duckdb.connect('citibike.db') as con:\n",
-    "    con.install_extension('spatial')\n",
-    "    con.load_extension('spatial')\n",
-    "    con.sql('show tables;')"
+    "con = duckdb.connect('citibike.db')\n",
+    "con.install_extension('spatial')\n",
+    "con.load_extension('spatial')\n",
+    "con.sql('show tables;')"
    ]
   },
   {
