add tables to citibike.db

--- a/05_duckdb.ipynb
+++ b/05_duckdb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "└───────────────┴──────────────┴──────────────┴──────────────┴──────────────┴───────────┴──────────┘"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "└──────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "└────────────────────┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -215,24 +215,24 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;W 56 St &amp; 6 Ave&quot;</td><td>6809.07</td><td>40.763406</td><td>-73.977225</td></tr><tr><td>&quot;E 26 St &amp; 3 Ave&quot;</td><td>6089.11</td><td>40.740693</td><td>-73.981606</td></tr><tr><td>&quot;34 St &amp; 4 Ave&quot;</td><td>3492.04</td><td>40.655278</td><td>-74.003101</td></tr><tr><td>&quot;George St &amp; Wilson Ave&quot;</td><td>4906.07</td><td>40.702997</td><td>-73.92997</td></tr><tr><td>&quot;Pacific St &amp; Thomas S. Boyland…</td><td>4023.05</td><td>40.675735</td><td>-73.913967</td></tr></tbody></table></div>"
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>start_station_name</th><th>start_station_id</th><th>start_lat</th><th>start_lng</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Irving Ave &amp; DeKalb Ave&quot;</td><td>4898.02</td><td>40.7027</td><td>-73.92095</td></tr><tr><td>&quot;36 St &amp; 3 Ave&quot;</td><td>3460.02</td><td>40.655716</td><td>-74.006664</td></tr><tr><td>&quot;Flatbush Ave &amp; Ocean Ave&quot;</td><td>3704.04</td><td>40.663657</td><td>-73.963014</td></tr><tr><td>&quot;Christ Hospital&quot;</td><td>null</td><td>40.734786</td><td>-74.050444</td></tr><tr><td>&quot;Sheridan Ave &amp; E 172 St&quot;</td><td>8229.04</td><td>40.840494</td><td>-73.911479</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 4)\n",
-       "┌─────────────────────────────────┬──────────────────┬───────────┬────────────┐\n",
-       "│ start_station_name              ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
-       "│ ---                             ┆ ---              ┆ ---       ┆ ---        │\n",
-       "│ str                             ┆ f64              ┆ f64       ┆ f64        │\n",
-       "╞═════════════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
-       "│ W 56 St & 6 Ave                 ┆ 6809.07          ┆ 40.763406 ┆ -73.977225 │\n",
-       "│ E 26 St & 3 Ave                 ┆ 6089.11          ┆ 40.740693 ┆ -73.981606 │\n",
-       "│ 34 St & 4 Ave                   ┆ 3492.04          ┆ 40.655278 ┆ -74.003101 │\n",
-       "│ George St & Wilson Ave          ┆ 4906.07          ┆ 40.702997 ┆ -73.92997  │\n",
-       "│ Pacific St & Thomas S. Boyland… ┆ 4023.05          ┆ 40.675735 ┆ -73.913967 │\n",
-       "└─────────────────────────────────┴──────────────────┴───────────┴────────────┘"
+       "┌──────────────────────────┬──────────────────┬───────────┬────────────┐\n",
+       "│ start_station_name       ┆ start_station_id ┆ start_lat ┆ start_lng  │\n",
+       "│ ---                      ┆ ---              ┆ ---       ┆ ---        │\n",
+       "│ str                      ┆ f64              ┆ f64       ┆ f64        │\n",
+       "╞══════════════════════════╪══════════════════╪═══════════╪════════════╡\n",
+       "│ Irving Ave & DeKalb Ave  ┆ 4898.02          ┆ 40.7027   ┆ -73.92095  │\n",
+       "│ 36 St & 3 Ave            ┆ 3460.02          ┆ 40.655716 ┆ -74.006664 │\n",
+       "│ Flatbush Ave & Ocean Ave ┆ 3704.04          ┆ 40.663657 ┆ -73.963014 │\n",
+       "│ Christ Hospital          ┆ null             ┆ 40.734786 ┆ -74.050444 │\n",
+       "│ Sheridan Ave & E 172 St  ┆ 8229.04          ┆ 40.840494 ┆ -73.911479 │\n",
+       "└──────────────────────────┴──────────────────┴───────────┴────────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,23 +282,12 @@
      "output_type": "stream",
      "text": [
       "Stations Table (sample):\n",
-      "                  start_station_name  start_station_id  start_lat  start_lng\n",
-      "0                    W 56 St & 6 Ave           6809.07  40.763406 -73.977225\n",
-      "1                    E 26 St & 3 Ave           6089.11  40.740693 -73.981606\n",
-      "2                      34 St & 4 Ave           3492.04  40.655278 -74.003101\n",
-      "3             George St & Wilson Ave           4906.07  40.702997 -73.929970\n",
-      "4  Pacific St & Thomas S. Boyland St           4023.05  40.675735 -73.913967\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "         start_station_name  start_station_id  start_lat  start_lng\n",
+      "0   Irving Ave & DeKalb Ave           4898.02  40.702700 -73.920950\n",
+      "1             36 St & 3 Ave           3460.02  40.655716 -74.006664\n",
+      "2  Flatbush Ave & Ocean Ave           3704.04  40.663657 -73.963014\n",
+      "3           Christ Hospital               NaN  40.734786 -74.050444\n",
+      "4   Sheridan Ave & E 172 St           8229.04  40.840494 -73.911479\n"
      ]
     }
    ],
@@ -350,7 +339,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now to add the rides table, which is the largest:"
+    "Now to add the rides table, which is the largest. Using DuckDB's command line interface, we can efficiently add the table directly, as we were experiencing kernel crashes while attempting this step in python.\n",
+    "\n",
+    "```bash\n",
+    "duckdb citibike.db;\n",
+    "\n",
+    "drop table if exists ride;\n",
+    "\n",
+    "create table ride as select * from read_parquet('../combined/group1_combined/group1_pl_ridenorm.parquet');\n",
+    "```\n",
+    "\n",
+    "To confirm that this process worked, I ran the following code:\n",
+    "```bash\n",
+    "select count(*) from ride;\n",
+    "```"
    ]
   },
   {
